b=413989, bad lines drawn over background images while zoomed (osx), r=roc